insert TeachBird Documentation

--- a/Dokumentation/Latex/Dokumentation.tex
+++ b/Dokumentation/Latex/Dokumentation.tex
@@ -127,7 +127,9 @@ Phillipp Dümleim, Carl Phillipp Knoblauch}
 \include{content/pflichtenheft}
 \include{content/studentGames}
 \include{content/fetchcontroller}
+\include{content/studentGameTeachBird}
 \include{content/iCloud}
+
 %usw. ...
 
 
