--- a/Dokumentation/Latex/Dokumentation.tex
+++ b/Dokumentation/Latex/Dokumentation.tex
@@ -127,6 +127,7 @@ Phillipp Dümleim, Carl Phillipp Knoblauch}
 \include{content/pflichtenheft}
 \include{content/studentGames}
 \include{content/studentGameTeachBird}
+\include{content/studentGamesFeedMe}
 \include{content/teacherDoc}
 \include{content/fetchcontroller}
 \include{content/iCloud}
