Updated student, pflichtenheft and fetchcontroller documentation. Replaced FH logo for for better quality

--- a/Dokumentation/Latex/content/pflichtenheft.tex
+++ b/Dokumentation/Latex/content/pflichtenheft.tex
@@ -49,7 +49,6 @@ Es ist eine Lernspiel Software für Grundschulschüler zu entwickeln, welche auf
 
 
 \subsection{Wunschkriterien}
-%todo
 \subsubsection{Allgemein}
 \begin{enumerate}[a)]
 \item Die App kann auch auf anderen iOS Geräten (iPhone) laufen
@@ -84,7 +83,7 @@ Es ist eine Lernspiel Software für Grundschulschüler zu entwickeln, welche auf
 
 
 \subsection{Abgrenzungskriterien}
-Das System besitzt keine Schnittstellen zu anderen Produkten.\\ %todo: evtl. bullet points
+Das System besitzt keine Schnittstellen zu anderen Produkten.
 Es existiert keine automatische Erfassung von Benutzern aus Fremddaten.
 
 \section{Produkteinsatz}
